3-mid/physics/implement/bullet/source/thin/bullet_c-binding.ads


   procedure b3d_Joint_hinge_Limits_are (Self              : in bullet_c.Pointers.Joint_pointer;
                                         Lower             : in c_math_c.Real;
                                         Upper             : in c_math_c.Real;
                                         Softeness         : in c_math_c.Real;
                                         bias_Factor       : in c_math_c.Real;
                                         relaxation_Factor : in c_math_c.Real);

   function b3d_Joint_hinge_motor_Enabled    (Self : in bullet_c.Pointers.Joint_pointer) return Swig.bool;
   function b3d_Joint_hinge_motor_Speed      (Self : in bullet_c.Pointers.Joint_pointer) return c_math_c.Real;
   function b3d_Joint_hinge_max_motor_Torque (Self : in bullet_c.Pointers.Joint_pointer) return c_math_c.Real;


   ---------
   --- Space
   --

   function  b3d_new_Space return bullet_c.Pointers.Space_pointer;
   procedure b3d_free_Space (Self : in bullet_c.Pointers.Space_pointer);

   procedure b3d_Space_add_Object     (Self       : in bullet_c.Pointers.Space_pointer;
                                       the_Object : in bullet_c.Pointers.Object_pointer);
   procedure b3d_Space_rid_Object     (Self       : in bullet_c.Pointers.Space_pointer;
                                       the_Object : in bullet_c.Pointers.Object_pointer);
   procedure b3d_Space_update_Bounds  (Self       : in bullet_c.Pointers.Space_pointer;
                                       the_Object : in bullet_c.Pointers.Object_pointer);

   procedure b3d_Space_add_Joint (Self              : in bullet_c.Pointers.Space_pointer;
                                  the_Joint         : in bullet_c.Pointers.Joint_pointer;
                                  collide_Connected : in interfaces.C.int);
   procedure b3d_Space_rid_Joint (Self      : in bullet_c.Pointers.Space_pointer;
                                  the_Joint : in bullet_c.Pointers.Joint_pointer);

   function b3d_Space_joint_Count (Self  : in bullet_c.Pointers.Space_pointer) return interfaces.C.int;
   function b3d_Space_Joint       (Self  : in bullet_c.Pointers.Space_pointer;
                                   Index : in interfaces.C.int) return bullet_c.Pointers.Joint_pointer;

   function  b3d_Space_Gravity    (Self : in bullet_c.Pointers.Space_pointer) return c_math_c.Vector_3.Item;
   procedure b3d_Space_Gravity_is (Self : in bullet_c.Pointers.Space_pointer;
                                   Now  : in c_math_c.Vector_3.Pointer);

   procedure b3d_Space_evolve (Self : in bullet_c.Pointers.Space_pointer;
                               By   : in interfaces.C.C_float);

   function b3d_Space_cast_Ray (Self : in bullet_c.Pointers.Space_pointer;
                                From : in c_math_c.Vector_3.Pointer;
                                To   : in c_math_c.Vector_3.Pointer) return bullet_c.ray_Collision.Item;

   function b3d_Space_cast_Point (Self  : in bullet_c.Pointers.Space_pointer;
                                  Point : in c_math_c.Vector_3.Pointer) return bullet_c.point_Collision.Item;

   function b3d_space_contact_Count (Self : in bullet_c.Pointers.Space_pointer) return interfaces.C.int;
   function b3d_space_Contact       (Self       : in bullet_c.Pointers.Space_pointer;
                                     contact_Id : in interfaces.C.int) return bullet_c.b3d_Contact.Item;


private

   pragma import (C, b3d_new_Box,                     "Ada_b3d_new_Box");
   pragma import (C, b3d_new_Capsule,                 "Ada_b3d_new_Capsule");
   pragma import (C, b3d_new_Cone,                    "Ada_b3d_new_Cone");
   pragma import (C, b3d_new_convex_Hull,             "Ada_b3d_new_convex_Hull");
   pragma import (C, b3d_new_Mesh,                    "Ada_b3d_new_Mesh");
   pragma import (C, b3d_new_Cylinder,                "Ada_b3d_new_Cylinder");
   pragma import (C, b3d_new_Heightfield,             "Ada_b3d_new_Heightfield");
   pragma import (C, b3d_new_multiSphere,             "Ada_b3d_new_multiSphere");
   pragma import (C, b3d_new_Plane,                   "Ada_b3d_new_Plane");
   pragma import (C, b3d_new_Sphere,                  "Ada_b3d_new_Sphere");
   pragma import (C, b3d_free_Shape,                  "b3d_free_Shape");
   pragma import (C, b3d_Shape_user_Data,             "Ada_b3d_Shape_user_Data");
   pragma import (C, b3d_Shape_user_Data_is,          "Ada_b3d_Shape_user_Data_is");
   pragma import (C, b3d_Shape_Scale_is,              "b3d_Shape_Scale_is");

   pragma import (C, b3d_new_Object,                  "Ada_b3d_new_Object");
   pragma import (C, b3d_free_Object,                 "b3d_free_Object");
   pragma import (C, b3d_Object_Shape,                "Ada_b3d_Object_Shape");
   pragma import (C, b3d_Object_user_Data,            "Ada_b3d_Object_user_Data");
   pragma import (C, b3d_Object_user_Data_is,         "Ada_b3d_Object_user_Data_is");
   pragma import (C, b3d_Object_Mass,                 "Ada_b3d_Object_Mass");
   pragma import (C, b3d_Object_Friction_is,          "Ada_b3d_Object_Friction_is");
   pragma import (C, b3d_Object_Restitution_is,       "Ada_b3d_Object_Restitution_is");
   pragma import (C, b3d_Object_Scale_is,             "b3d_Object_Scale_is");
   pragma import (C, b3d_Object_is_Active,            "b3d_Object_is_Active");
   pragma import (C, b3d_Object_activate,             "b3d_Object_activate");
   pragma import (C, b3d_Object_Site,                 "Ada_b3d_Object_Site");
   pragma import (C, b3d_Object_Site_is,              "Ada_b3d_Object_Site_is");
   pragma import (C, b3d_Object_Spin,                 "Ada_b3d_Object_Spin");
   pragma import (C, b3d_Object_Spin_is,              "Ada_b3d_Object_Spin_is");
   pragma import (C, b3d_Object_Transform,            "Ada_b3d_Object_Transform");
   pragma import (C, b3d_Object_Transform_is,         "Ada_b3d_Object_Transform_is");
   pragma import (C, b3d_Object_Speed,                "Ada_b3d_Object_Speed");
   pragma import (C, b3d_Object_Speed_is,             "Ada_b3d_Object_Speed_is");
   pragma import (C, b3d_Object_Gyre,                 "Ada_b3d_Object_Gyre");
   pragma import (C, b3d_Object_Gyre_is,              "Ada_b3d_Object_Gyre_is");
   pragma import (C, b3d_Object_apply_Force,          "Ada_b3d_Object_apply_Force");
   pragma import (C, b3d_Object_apply_Torque,         "Ada_b3d_Object_apply_Torque");
   pragma import (C, b3d_Object_apply_Torque_impulse, "Ada_b3d_Object_apply_Torque_impulse");

   pragma import (C, b3d_new_hinge_Joint,             "Ada_b3d_new_hinge_Joint");
   pragma import (C, b3d_new_hinge_Joint_with_anchors, "b3d_new_hinge_Joint_with_anchors");
   pragma import (C, b3d_new_space_hinge_Joint,       "Ada_b3d_new_space_hinge_Joint");
   pragma import (C, b3d_new_DoF6_Joint,              "Ada_b3d_new_DoF6_Joint");
   pragma import (C, b3d_new_cone_twist_Joint,        "Ada_b3d_new_cone_twist_Joint");
   pragma import (C, b3d_new_slider_Joint,            "Ada_b3d_new_slider_Joint");
   pragma import (C, b3d_new_ball_Joint,              "Ada_b3d_new_ball_Joint");
   pragma import (C, b3d_free_Joint,                  "b3d_free_Joint");
   pragma import (C, b3d_Joint_user_Data,             "Ada_b3d_Joint_user_Data");
   pragma import (C, b3d_Joint_user_Data_is,          "Ada_b3d_Joint_user_Data_is");
   pragma import (C, b3d_Joint_Object_A,              "Ada_b3d_Joint_Object_A");
   pragma import (C, b3d_Joint_Object_B,              "Ada_b3d_Joint_Object_B");
   pragma import (C, b3d_Joint_Frame_A,               "Ada_b3d_Joint_Frame_A");
   pragma import (C, b3d_Joint_Frame_B,               "Ada_b3d_Joint_Frame_B");
   pragma import (C, b3d_Joint_Frame_A_is,            "b3d_Joint_Frame_A_is");
   pragma import (C, b3d_Joint_Frame_B_is,            "b3d_Joint_Frame_B_is");
   pragma import (C, b3d_Joint_is_Limited,            "b3d_Joint_is_Limited");
   pragma import (C, b3d_Joint_Extent,                "b3d_Joint_Extent");
   pragma import (C, b3d_Joint_Velocity_is,           "b3d_Joint_Velocity_is");
   pragma import (C, b3d_Joint_desired_Extent_is,     "b3d_Joint_desired_Extent_is");
   pragma import (C, b3d_Joint_lower_Limit,           "b3d_Joint_lower_Limit");
   pragma import (C, b3d_Joint_upper_Limit,           "b3d_Joint_upper_Limit");
   pragma import (C, b3d_Joint_lower_Limit_is,        "b3d_Joint_lower_Limit_is");
   pragma import (C, b3d_Joint_upper_Limit_is,        "b3d_Joint_upper_Limit_is");
   pragma import (C, b3d_Joint_applied_Impulse,       "b3d_Joint_applied_Impulse");
   pragma import (C, b3d_Joint_hinge_Limits_are,      "Ada_b3d_Joint_hinge_Limits_are");
   pragma import (C, b3d_Joint_hinge_motor_Enabled,   "b3d_Joint_hinge_motor_Enabled");
   pragma import (C, b3d_Joint_hinge_motor_Speed,     "b3d_Joint_hinge_motor_Speed");
   pragma import (C, b3d_Joint_hinge_max_motor_Torque, "b3d_Joint_hinge_max_motor_Torque");

   pragma import (C, b3d_new_Space,                   "Ada_b3d_new_Space");
   pragma import (C, b3d_free_Space,                  "Ada_b3d_free_Space");
   pragma import (C, b3d_Space_add_Object,            "Ada_b3d_Space_add_Object");
   pragma import (C, b3d_Space_rid_Object,            "Ada_b3d_Space_rid_Object");
   pragma import (C, b3d_Space_update_Bounds,         "b3d_Space_update_Bounds");
   pragma import (C, b3d_Space_add_Joint,             "b3d_Space_add_Joint");
   pragma import (C, b3d_Space_rid_Joint,             "b3d_Space_rid_Joint");
   pragma import (C, b3d_Space_joint_Count,           "b3d_Space_joint_Count");
   pragma import (C, b3d_Space_Joint,                 "b3d_Space_Joint");
   pragma import (C, b3d_Space_Gravity,               "b3d_Space_Gravity");
   pragma import (C, b3d_Space_Gravity_is,            "Ada_b3d_Space_Gravity_is");
   pragma import (C, b3d_Space_evolve,                "Ada_b3d_Space_evolve");
   pragma import (C, b3d_Space_cast_Ray,              "Ada_b3d_Space_cast_Ray");
   pragma import (C, b3d_Space_cast_Point,            "b3d_Space_cast_Point");
   pragma import (C, b3d_space_contact_Count,         "b3d_space_contact_Count");
   pragma import (C, b3d_space_Contact,               "b3d_space_Contact");

end bullet_c.Binding;
